# secser_robot

linorobot2_description/: CMakeLists.txt  package.xml
linorobot2_description/launch/: upload_robot.launch.py
linorobot2_description/rviz/: description.rviz
linorobot2_description/urdf/: mecanum_properties.urdf.xacro
linorobot2_description/urdf/controllers/: mecanum_ros2_control.urdf.xacro
linorobot2_description/urdf/mech/: mecanum_wheel.urdf.xacro
linorobot2_description/urdf/robots/: mecanum.urdf.xacro
linorobot2_description/urdf/sensors/: depth_sensor.urdf.xacro  laser.urdf.xacro
linorobot2_gazebo/: CMakeLists.txt
mecanumbot_control/: CMakeLists.txt
mecanumbot_control/src/: mecanumbot_control_node.cpp
minibot_bringup/: package.xml
minibot_bringup/launch/: bringup_robot.launch.py  bringup_test.launch.py  mecanumbot_hardware.launch.py  mecanumbot_state_publisher.py
minibot_bringup/scripts/: 77-secser-robot.rules
minibot_description/: CMakeLists.txt  package.xml
minibot_description/config/: robot_controller_config.yaml
minibot_description/launch/: view_robot.launch.py
minibot_description/rviz/: view_robot.rviz
minibot_description/urdf/: minibot.urdf.xacro  minibot_ros2_control.urdf.xacro  robot.urdf.xacro  robot_test.urdf.xacro
minibot_hardware_interface/: minibot_hardware.xml
secser/: CMakeLists.txt  package.xml
secser_base/: CMakeLists.txt  package.xml
secser_bringup/: CMakeLists.txt  package.xml
secser_hardware_interface/: CMakeLists.txt  minibot_hardware.xml  package.xml
secser_hardware_interface copy/: minibot_hardware.xml
(+11 files in other folders)
